trunk/Archive2/82/10bcda4d2a4d87/output
main.cpp:1:1: error: unknown type name 'SymbolicAddition'
SymbolicAddition operator + (int a, int b)
^
main.cpp:3:12: error: use of undeclared identifier 'SymbolicAddtion'
    return SymbolicAddtion(a, b);
           ^
main.cpp:8:5: error: unknown type name 'SymbolicAddition'
    SymbolicAddition sym = 1 + 2;
    ^
3 errors generated.
