trunk/Archive2/82/10bcda4d2a4d87/main.cpp
SymbolicAddition operator + (int a, int b)
{
    return SymbolicAddtion(a, b);
}

int main()
{
    SymbolicAddition sym = 1 + 2;
    
    sym.toString(); // returns "1 + 2"
    sym.evaluate(); // returns 3
}
